# sfml-game

./: .gitignore  CMakeLists.txt  README.md  configure.bat  main.cpp
cmake/: add_box2d.cmake  add_cppfs.cmake  add_eigen.cmake  add_fmt.cmake  add_json.cmake  add_sfml.cmake  add_spdlog.cmake  add_tgui.cmake
core/: CMakeLists.txt  Camera.cpp  Camera.hpp  Constants.hpp  GameManager.cpp  GameManager.hpp  GameObject.cpp  GameObject.hpp  GameWorld.cpp  GameWorld.hpp  SFMLFormatters.hpp  SceneManager.cpp  SceneManager.hpp
core/gameobject/: GameObject.cpp  GameObject.hpp
core/manager/: AssetsManager.cpp  AssetsManager.hpp  GameManager.cpp  GameManager.hpp
core/scene/: MainScene.cpp  MainScene.hpp
docs/: ADL.md  ANALYSE_TECHNIQUE.md  AssetsManager.md  CORRECTIFS_CAMERA.md  CodeFormatting.md
src/: main.cpp
